[package]
name = "trv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.7.5", features=["multipart"]}
ffmpeg-next = "7.0.2"
serde_json = "1.0.120"
tokio = {version="1.38.1", features=["full"]}
tower = "0.4.13"
tower-http = {version="0.5.2", features=["full"]}
tracing-subscriber = "0.3.18"
uuid = {version="1.10.0", features=["v4"]}
